# zozo

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CopyToBin.bat  KillAll.bat  StartAll.bat  conversation_2026-04-14.txt
.claude/: settings.local.json
Backup/: GAME_SERVER.ini  GodotTcpConnectionTest.gd  LOBBY_SERVER.ini  tasks.vs.json
Bot/: CMakeLists.txt
DBCacheClient/: CMakeLists.txt  DBCacheClient.cpp  DBCacheClient.h
DBCacheServer/: CMakeLists.txt
DBSchema/: user.sql  user.sql.txt  user_character.sql  user_character.sql.txt
DBSchema/Game/: character.sql.txt
DBSchema/Lobby/: game_server.sql.txt
DataConverter/: DataConverter.csproj  DataConverter.slnx  Program.cs
DataConverter/Properties/: launchSettings.json
DataConverter/WriteFile/: WriteHeaderFile.cs  WriteSourceFile.cs
DotNetProjects/: DotNetProjects.slnx
DummyDBCacheServer/: CMakeLists.txt  DummyDBCacheServer.cpp  DummyDBCacheServer.h  main.cpp
DummyDBCacheServer/Session/: DBClient.cpp  DBClient.h  DBClientManager.cpp  DBClientManager.h
Engine/: BoostTcpSocket.cpp  BoostTcpSocket.h  Character.cpp  CharacterManager.cpp  CharacterManager.h  Concepts.h  EnvironmentVariable.cpp  EnvironmentVariable.h  IActor.h  ISocket.h  Macros.h  Message.cpp  Message.h  Room.cpp  Room.h  Singleton.h
Engine/DB/: DBManager.cpp  DBManager.h
Engine/Numeric/: IdGenerator.cpp  IdGenerator.h
Engine/Socket/: BoostTcpSocket.cpp  BoostTcpSocket.h  ISocket.h  InternalClient.cpp  InternalClient.h  Message.cpp  Message.h  ServerBase.cpp  ServerBase.h
Engine/StaticData/: IProtoType.h  StaticDataManager.cpp  StaticDataManager.h
Engine/Tx/: CacheField.cpp  CacheField.h  CacheObject.cpp  CacheObject.h  CacheTx.cpp  CacheTx.h  CacheTxOption.h  Continuation.cpp  Continuation.h  Continuation.inl  CustomAttributes.h  MemField.cpp  MemField.h  MemObject.h  MemTx.cpp  MemTx.h  MemTxOption.h  MemTxState.h  ReadableObject.cpp  ReadableObject.h  ReadableTx.cpp  ReadableTx.h  TxExecutor.cpp  TxExecutor.h  WritableObject.cpp  WritableObject.h  WritableTx.cpp  WritableTx.h
Engine/Util/: StopWatch.h
FbsGrammar/: FlatBuffersBaseListener.cs  FlatBuffersLexer.interp  FlatBuffersListener.cs
FlatCacheGenerator/: FlatBuffers.g4  FlatBuffers.interp  FlatBuffersBaseListener.cs  FlatBuffersLexer.cs  FlatBuffersLexer.interp  FlatBuffersListener.cs  FlatBuffersParser.cs  FlatCacheGenerator.sln  Program.cs  StaticData.cs
FlatCacheGenerator/.antlr/: FlatBuffers.interp  FlatBuffers.tokens  FlatBuffersLexer.java  FlatBuffersParser.java
FlatCacheGenerator/AntlrFiles/: BuildG4.bat  FlatBuffers.interp  FlatBuffersLexer.cs  FlatBuffersLexer.interp
FlatCacheGenerator/MakeFile/: CppFile.cs  HFile.cs  SQLFile.cs
FlatCacheGenerator/Parsed/: FlatBufferField.cs  FlatBufferTree.cs  FlatBufferType.cs
FlatCacheGenerator/Properties/: launchSettings.json
FlatMemGenerator/: FlatMemGenerator.sln  Program.cs  StaticData.cs
FlatMemGenerator/.antlr/: FlatBuffersParser.java
FlatMemGenerator/AntlrFiles/: FlatBuffers.g4  FlatBuffersBaseListener.cs  FlatBuffersListener.cs  FlatBuffersParser.cs
FlatMemGenerator/MakeFile/: CppFile.cs  HFile.cs  SQLFile.cs
FlatMemGenerator/Parsed/: FlatBufferField.cs  FlatBufferTree.cs  FlatBufferType.cs
FlatMemGenerator/Properties/: launchSettings.json
GameServer/: CMakeLists.txt  GameServer.cpp  GameServer.h  PCH.h  StaticResults.h  main.cpp
GameServer/Actor/: BroadCast.cpp  BroadCast.h  IActor.h  LobbyProxy.cpp  LobbyProxy.h  Zone.cpp  Zone.h  ZoneManager.cpp  ZoneManager.h
GameServer/Actor/Character/: Character.cpp  Character.h  CharacterManager.cpp  CharacterManager.h
GameServer/Actor/Character/ReceiveMessage/: RecCharacterSelectReq.cpp  RecvCharacterListReq.cpp  RecvCharacterPositionUpdateReq.cpp  RecvCharacterSelectReq.cpp  RecvTryGetItemReq.cpp
LobbyServer/: CMakeLists.txt  LobbyServer.cpp  LobbyServer.h  StaticResults.h  main.cpp
LobbyServer/Session/: LobbyStub.cpp  LobbyStub.h  LobbyStubManager.cpp  LobbyStubManager.h  LobbyUser.cpp  LobbyUser.h  LobbyUserManager.cpp  LobbyUserManager.h
MessageSchema/: CharacterMove.fbs  Connection.fbs  Connection_generated.h  Constant_generated.h  GenCacheObj.bat  GenMemObj.bat  GenerateGodotCS.bat  Lobby.fbs  LobbyServer_generated.h  Lobby_generated.h  Message.fbs  MessageId.fbs  MessageId_generated.h  Message_generated.h
MessageSchema/Common/: CharacterInfo.fbs  CharacterInfo_generated.h  Constant.fbs  Constant_generated.h  Item.fbs  ItemInfo.fbs  ItemInfo_generated.h  Item_generated.h  ServerInfo.fbs  ServerInfo_generated.h  Type.fbs  Type_generated.h
MessageSchema/Internal/: Constant.fbs  Constant_generated.h  DBCache.fbs  DBCacheLobby.fbs  DBCacheLobby_generated.h  DBCache_generated.h  InternalConstant_generated.h  LobbyGame.fbs  LobbyGame_generated.h
StaticData/: .~lock.item.xlsx#  item.xlsx
StaticData/json/: item.json
TestConsole/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  CacheTx.h  CacheTxState.h  Character.h  PCH.h  ResultCode.h  TxExecutor.cpp  TxExecutor.h  Types.h
game/: CMakeLists.txt
test/: CMakeLists.txt
zozo-client/: ZozoClient.csproj  ZozoClient.sln  icon.svg.import  project.godot
zozo-client/Properties/: launchSettings.json
zozo-client/art/: character_create.png.import  character_select.png.import  cliff_tile.tres  grass.png.import  ground_tile.tres  lobby.bmp.import  object_tile.tres  objects.png.import  objects_with_apple_tree.png.import  plains.png.import  player.png.import  player_animation.tres  slime.png.import
zozo-client/scene/: AppleTree.tscn  CharacterCreate.tscn  CharacterSelect.tscn  Inventory.tscn  ItemSlot_UI.tscn  Lobby.tscn  Main.tscn  OtherPlayer.tscn  Player.tscn  UI.tscn  main.tscn
zozo-client/script/: AbstractSocket.cs  AbstractSocket.cs.uid  CSGlobal.cs  CSGlobal.cs.uid  CharacterGenerator.cs  CharacterSelect.gd  Controllable.cs.uid  GDGlobal.gd  GameSocketImpl.cs  GameSocketImpl.cs.uid  GameSocketManager.cs  GameSocketManager.cs.uid  Global.gd  Global.gd.uid  Lobby.gd  Lobby.gd.uid  LobbySocketImpl.cs  LobbySocketImpl.cs.uid  LobbySocketManager.cs  Player.cs  (+12 more)
(+162 files in other folders)
