file(GLOB_RECURSE DBCACHE_CLIENT_SOURCE *.cpp)
file(GLOB_RECURSE DBCACHE_CLIENT_HEADER *.h)

find_package(Boost REQUIRED COMPONENTS charconv)
find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)

add_library(DBCACHE_CLIENT STATIC
	${DBCACHE_CLIENT_SOURCE} ${DBCACHE_CLIENT_HEADER}
)
set_property(TARGET DBCACHE_CLIENT PROPERTY CXX_STANDARD 20)
set_property(TARGET DBCACHE_CLIENT PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_link_libraries(DBCACHE_CLIENT PRIVATE
	ENGINE 
	Boost::charconv 
	Threads::Threads 
	OpenSSL::Crypto 
	OpenSSL::SSL)

target_precompile_headers(DBCACHE_CLIENT PUBLIC PCH.h)

target_compile_definitions(DBCACHE_CLIENT PRIVATE _UNICODE UNICODE)
target_include_directories(DBCACHE_CLIENT PRIVATE 
	${CMAKE_CURRENT_SOURCE_DIR} 
	${CMAKE_CURRENT_SOURCE_DIR}/.. 
	${CMAKE_CURRENT_SOURCE_DIR}/../MessageSchema/Common 
	${OPENSSL_INCLUDE_DIR} 
	$ENV{FLAT_BUFFER_INCLUDE} 
	$ENV{BOOST_ROOT})