file(GLOB_RECURSE DBCACHE_SOURCE *.cpp)
file(GLOB_RECURSE DBCACHE_HEADER *.h)

#set_source_files_properties(${DBCACHE_SOURCE} PROPERTIES COMPILE_FLAGS "/Ycstdafx.h")

add_executable(DBCACHE_SERVER 
	${DBCACHE_SOURCE} ${DBCACHE_HEADER}
)
set_property(TARGET DBCACHE_SERVER PROPERTY CXX_STANDARD 20)
set_property(TARGET DBCACHE_SERVER PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_compile_definitions(DBCACHE_SERVER PRIVATE _UNICODE UNICODE)
target_include_directories(DBCACHE_SERVER PRIVATE $ENV{FLAT_BUFFER_INCLUDE} $ENV{BOOST_ROOT})