file(GLOB_RECURSE DBCACHE_SOURCE *.cpp)
file(GLOB_RECURSE DBCACHE_HEADER *.h)

add_executable(DBCACHE_SERVER 
	${DBCACHE_SOURCE} ${DBCACHE_HEADER}
)
set_property(TARGET DBCACHE_SERVER PROPERTY CXX_STANDARD 20)
set_property(TARGET DBCACHE_SERVER PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_precompile_headers(DBCACHE_SERVER PUBLIC PCH.h)

target_compile_definitions(DBCACHE_SERVER PRIVATE _UNICODE UNICODE)
target_include_directories(DBCACHE_SERVER PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR} $ENV{FLAT_BUFFER_INCLUDE} $ENV{BOOST_ROOT})