file(GLOB_RECURSE DUMMY_DBCACHE_SOURCE *.cpp)
file(GLOB_RECURSE DUMMY_DBCACHE_HEADER *.h)

add_executable(DUMMY_DBCACHE_SERVER 
	${DUMMY_DBCACHE_SOURCE} ${DUMMY_DBCACHE_HEADER}
)
set_property(TARGET DUMMY_DBCACHE_SERVER PROPERTY CXX_STANDARD 20)
set_property(TARGET DUMMY_DBCACHE_SERVER PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_precompile_headers(DUMMY_DBCACHE_SERVER PUBLIC PCH.h)

target_compile_definitions(DUMMY_DBCACHE_SERVER PRIVATE _UNICODE UNICODE)
target_include_directories(DUMMY_DBCACHE_SERVER PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR} $ENV{FLAT_BUFFER_INCLUDE} $ENV{BOOST_ROOT})