file(GLOB_RECURSE GAME_SOURCE *.cpp)
file(GLOB_RECURSE GAME_HEADER *.h)

#set_source_files_properties(${GAME_SOURCE} PROPERTIES COMPILE_FLAGS "/Ycstdafx.h")

add_executable(GAME_SERVER 
	${GAME_SOURCE} ${GAME_HEADER}
)
set_property(TARGET GAME_SERVER PROPERTY CXX_STANDARD 20)
set_property(TARGET GAME_SERVER PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_compile_definitions(GAME_SERVER PRIVATE _UNICODE UNICODE)
target_include_directories(GAME_SERVER PRIVATE $ENV{FLAT_BUFFER_INCLUDE} $ENV{BOOST_ROOT})