file(GLOB_RECURSE LOBBY_SOURCE *.cpp)
file(GLOB_RECURSE LOBBY_HEADER *.h)

#set_source_files_properties(${LOBBY_SOURCE} PROPERTIES COMPILE_FLAGS "/YPCH.h")

add_executable(LOBBY_SERVER 
	${LOBBY_SOURCE} ${LOBBY_HEADER}
)

target_link_libraries(LOBBY_SERVER PRIVATE Engine)

set_property(TARGET LOBBY_SERVER PROPERTY CXX_STANDARD 20)
set_property(TARGET LOBBY_SERVER PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_compile_definitions(LOBBY_SERVER PRIVATE _UNICODE UNICODE)
target_include_directories(LOBBY_SERVER PUBLIC 
	${CMAKE_CURRENT_SOURCE_DIR} 
	${CMAKE_CURRENT_SOURCE_DIR}/.. 
	$ENV{FLAT_BUFFER_INCLUDE} 
	$ENV{BOOST_ROOT})