file(GLOB_RECURSE GAME_SOURCE *.cpp)
file(GLOB_RECURSE GAME_HEADER *.h)

#set_source_files_properties(${GAME_SOURCE} PROPERTIES COMPILE_FLAGS "/Ycstdafx.h")

add_library( ZOZOTOWN STATIC 
	${GAME_SOURCE} ${GAME_HEADER}
)
set_property(TARGET ZOZOTOWN PROPERTY CXX_STANDARD 20)
set_property(TARGET ZOZOTOWN PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_compile_definitions(ZOZOTOWN PRIVATE _UNICODE UNICODE)
target_include_directories(ZOZOTOWN PRIVATE $ENV{FLAT_BUFFER_INCLUDE} $ENV{BOOST_ROOT})