file(GLOB_RECURSE TEST_SRC    *.cpp)
file(GLOB_RECURSE TEST_HEADER *.h)

#set_source_files_properties(${TEST_SRC} PROPERTIES COMPILE_FLAGS "/Ycstdafx.h")

add_library(ZOZOTEST STATIC 
	${TEST_SRC} ${TEST_HEADER}
	${TEST_SRC} ${TEST_HEADER}
)

set_property(TARGET ZOZOTEST PROPERTY CXX_STANDARD 20)
set_property(TARGET ZOZOTEST PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)

target_compile_definitions(ZOZOTEST PRIVATE _UNICODE UNICODE)
target_include_directories(ZOZOTEST PRIVATE $ENV{FLAT_BUFFER_INCLUDE} $ENV{BOOST_ROOT})